update with music

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                 window.parent.postMessage('resize', "*");
             }
         </script>
-    
+    <audio src="Cyndi Lauper - Girls Just Want To Have Fun.mp3" autoplay loop></audio>
 
 </body>
 </html>
