update with music

--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@
 
         <section class="wrap">
         <section class="gift">
-            <div class="giftcard">iTunes
-                <br/>Gift Card</div>
+            <div class="giftcard">Mi
+                <br/>Cosita Rica</div>
             <section class="gift_top">
                 <div class="ribbon_right"></div>
                 <div class="ribbon_left"></div>
